# SkinBuilder

./: .gitmodules  CMakeLists.txt
assets/shaders/: main.frag  main.vert
src/: Main.cpp
src/Core/: Core.hpp  Logger.cpp  Logger.hpp  Memory.hpp  SkinBuilder.cpp  SkinBuilder.hpp  Window.cpp  Window.hpp
src/Graphics/: Camera.cpp  Camera.hpp  Mesh.cpp  Mesh.hpp  Vertex.hpp  VertexBufferLayout.hpp
src/ImGui/: ImGui.cpp  ImGui.hpp
src/Platform/Vulkan/: VulkanAllocator.cpp  VulkanAllocator.hpp  VulkanCommandBuffer.cpp  VulkanCommandBuffer.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanFramebuffer.cpp  VulkanFramebuffer.hpp  VulkanIndexBuffer.cpp  VulkanIndexBuffer.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanRenderPass.cpp  VulkanRenderPass.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanShader.cpp  VulkanShader.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp  VulkanTexture.cpp  VulkanTexture.hpp  VulkanUniformBuffer.cpp  VulkanUniformBuffer.hpp  VulkanUniformBufferSet.hpp  VulkanVertexBuffer.cpp  VulkanVertexBuffer.hpp
src/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.hpp
